data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef unsigned char uint8_t;
typedef unsigned short uint16_t;
typedef unsigned int uint32_t;
struct HdfSListNode {
    struct HdfSListNode *next;
};
struct HdfDeviceInfo {
    struct HdfSListNode node;
    _Bool isDynamic;
    uint16_t status;
    uint16_t deviceType;
    uint32_t deviceId;
    uint16_t policy;
    uint16_t priority;
    uint16_t preload;
    uint16_t permission;
    const char *moduleName;
    const char *svcName;
    const char *deviceMatchAttr;
    const char *deviceName;
};
struct DListHead {
    struct DListHead *next;
    struct DListHead *prev;
};
typedef uint32_t devid_t;
struct HdfDeviceNode;
struct HdfDevice {
    struct IHdfDevice super;
    struct DListHead node;
    struct DListHead devNodes;
    devid_t deviceId;
    uint16_t devidIndex;
};
struct HdfDeviceObject {
    struct IDeviceIoService *service;
    const struct DeviceResourceNode *property;
    DeviceClass deviceClass;
    void *priv;
};
struct HdfDriverEntry {
    int32_t moduleVersion;
    const char *moduleName;
    int32_t (*Bind)(struct HdfDeviceObject *deviceObject);
    int32_t (*Init)(struct HdfDeviceObject *deviceObject);
    void (*Release)(struct HdfDeviceObject *deviceObject);
};
struct HdfDriver {
    const struct HdfDriverEntry *entry;
    uint16_t type;
    uint16_t bus;
    struct DListHead node;
    void *priv;
};
struct IPowerEventListener {
    int (*DozeResume)(struct HdfDeviceObject *deviceObject);
    int (*DozeSuspend)(struct HdfDeviceObject *deviceObject);
    int (*Resume)(struct HdfDeviceObject *deviceObject);
    int (*Suspend)(struct HdfDeviceObject *deviceObject);
};
struct HdfDeviceNode;
struct DevHostService;
struct IDeviceNode {
    struct HdfObject object;
    int (*PublishService)(struct HdfDeviceNode *devNode);
    int (*RemoveService)(struct HdfDeviceNode *devNode);
    int (*LaunchNode)(struct HdfDeviceNode *devNode);
    void (*UnlaunchNode)(struct HdfDeviceNode *devNode);
};
struct HdfDeviceNode {
    struct IDeviceNode super;
    struct DListHead entry;
    struct PowerStateToken *powerToken;
    struct DevHostService *hostService;
    struct HdfDeviceObject deviceObject;
    struct IHdfDeviceToken *token;
    struct HdfDriver *driver;
    struct HdfDevice *device;
    char *servName;
    const char *servInfo;
    char *driverName;
    devid_t devId;
    uint16_t policy;
    uint16_t permission;
    uint8_t devStatus;
    _Bool servStatus;
    char *interfaceDesc;
};
int HdfDeviceNodeAddPowerStateListener(
    struct HdfDeviceNode *devNode, const struct IPowerEventListener *listener);
void HdfDeviceNodeRemovePowerStateListener(
    struct HdfDeviceNode *devNode, const struct IPowerEventListener *listener);
void HdfDeviceNodeConstruct(struct HdfDeviceNode *devNode);
void HdfDeviceNodeDestruct(struct HdfDeviceNode *devNode);
struct HdfDeviceNode *HdfDeviceNodeNewInstance(const struct HdfDeviceInfo *deviceInfo, struct HdfDriver *driver);
void HdfDeviceNodeFreeInstance(struct HdfDeviceNode *devNode);
int HdfDeviceNodePublishPublicService(struct HdfDeviceNode *devNode);
int HdfDeviceNodeRemoveService(struct HdfDeviceNode *devNode);
int DeviceDriverBind(struct HdfDeviceNode *devNode);
struct IHdfDeviceToken {
    struct HdfObject object;
    devid_t devid;
    const char *servName;
    const char *deviceName;
};
struct DevHostService {
    struct IDevHostService super;
    uint16_t hostId;
    const char *hostName;
    struct DListHead devices;
    struct HdfServiceObserver observer;
    struct HdfSysEventNotifyNode sysEventNotifyNode;
};
struct PowerStateToken {
    struct IPowerStateToken super;
    const struct IPowerEventListener *listener;
    struct HdfDeviceObject *deviceObject;
    struct HdfSRef wakeRef;
    HdfPsmState psmState;
    uint32_t mode;
};