data/rq1/k10/intermediate/host__25c1898e1626/workspace/final_projects/host__25c1898e1626/translate_by_qwen3_coder/.c2r_bindgen_fns/hdf_device_node_84c17260.fns.rs

/* automatically generated by rust-bindgen 0.72.1 */

unsafe extern "C" {
    pub fn HdfDeviceNodeAddPowerStateListener(
        devNode: *mut HdfDeviceNode,
        listener: *const IPowerEventListener,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfDeviceNodeRemovePowerStateListener(
        devNode: *mut HdfDeviceNode,
        listener: *const IPowerEventListener,
    );
}
unsafe extern "C" {
    pub fn HdfDeviceNodeConstruct(devNode: *mut HdfDeviceNode);
}
unsafe extern "C" {
    pub fn HdfDeviceNodeDestruct(devNode: *mut HdfDeviceNode);
}
unsafe extern "C" {
    pub fn HdfDeviceNodeNewInstance(
        deviceInfo: *const HdfDeviceInfo,
        driver: *mut HdfDriver,
    ) -> *mut HdfDeviceNode;
}
unsafe extern "C" {
    pub fn HdfDeviceNodeFreeInstance(devNode: *mut HdfDeviceNode);
}
unsafe extern "C" {
    pub fn HdfDeviceNodePublishPublicService(devNode: *mut HdfDeviceNode) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfDeviceNodeRemoveService(devNode: *mut HdfDeviceNode) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn DeviceDriverBind(devNode: *mut HdfDeviceNode) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn HdfDeviceLaunchNode(devNode: *mut HdfDeviceNode) -> ::core::ffi::c_int;
}
